syntax = "proto3";
package user_srv;
option go_package =".;proto";

// 用户服务
service User{
  rpc GetUserList(PageInfo) returns (UserListResponse);
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);
  rpc GetUserById(IdRequest) returns(UserInfoResponse);
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);
  rpc UpdateUser(UpdateUserInfo)  returns(UserInfoResponse);
  rpc CheckPassWord(PasswordCheckInfo) returns(CheckResponse);
}

message PageInfo {
  int32 pn=1;
  int32 pSize=2;
}

message CheckResponse{
  bool ok = 1;
}

message CreateUserInfo{
  string nickname = 1;
  string mobile = 2;
  string password = 3;
}

message PasswordCheckInfo{
  int32 id = 1;
  string password =2;
}

message UpdateUserInfo{
  int32 id =1;
  string nickname=2;
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  int32 id = 1;
}

message UserInfoResponse{
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  int32 role = 5;
}

message UserListResponse{
  int32 total=1;
  repeated UserInfoResponse data = 2;
}